--- a/sites/arolariu.ro/src/app/domains/invoices/_dialogs/ShareInvoiceDialog.module.scss
+++ b/sites/arolariu.ro/src/app/domains/invoices/_dialogs/ShareInvoiceDialog.module.scss
@@ -69,19 +69,11 @@
 .globeIcon {
   @include icon-size(1.5rem);
   color: color('primary');
-
-  @include dark {
-    color: color('primary');
-  }
 }
 
 .lockIcon {
   @include icon-size(1.5rem);
   color: color('success');
-
-  @include dark {
-    color: color('success');
-  }
 }
 
 .alertIcon {
