--- a/sites/arolariu.ro/src/app/domains/invoices/view-scans/island.module.scss
+++ b/sites/arolariu.ro/src/app/domains/invoices/view-scans/island.module.scss
@@ -16,7 +16,7 @@
   flex-shrink: 0;
   border-radius: abstracts.radius('lg');
   background-color: abstracts.color('primary');
-  color: abstracts.color('primary');
+  color: abstracts.color('primary-foreground');
 
   @include abstracts.dark {
     background-color: abstracts.color-alpha('primary', 0.5);
@@ -176,38 +176,22 @@
   width: abstracts.space(10);
   border-radius: abstracts.radius('full');
   background-color: abstracts.color('primary');
-
-  @include abstracts.dark {
-    background-color: abstracts.color('primary');
-  }
 }
 
 .selectionIcon {
   height: abstracts.space(5);
   width: abstracts.space(5);
-  color: abstracts.color('primary');
-
-  @include abstracts.dark {
-    color: abstracts.color('primary');
-  }
+  color: abstracts.color('primary-foreground');
 }
 
 .selectionTitle {
   font-weight: abstracts.font-weight('semibold');
   color: abstracts.color('primary');
-
-  @include abstracts.dark {
-    color: abstracts.color('primary');
-  }
 }
 
 .selectionDescription {
   font-size: abstracts.font-size('sm');
   color: abstracts.color('primary');
-
-  @include abstracts.dark {
-    color: abstracts.color('primary');
-  }
 }
 
 // ===========================================
@@ -235,7 +219,7 @@
 .quickUploadIcon {
   height: abstracts.space(5);
   width: abstracts.space(5);
-  color: abstracts.color('primary');
+  color: abstracts.color('primary-foreground');
 
   @include abstracts.dark {
     color: abstracts.color('primary');
